# MUSA

./: README.md  build.sh
src/tasksim-3.1/: .gitignore  AUTHORS  COPYING  MUSA_PROFET.cbp  MUSA_PROFET.layout  Makefile.am  Makefile.in  NEWS  README_MUSA  aclocal.m4  compile  config.guess  config.sub  configure  configure.ac  depcomp  install-sh  ltmain.sh  missing  setup.sh
src/tasksim-3.1/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2
src/tasksim-3.1/conf/: arm_high_end.conf  arm_low_power.conf  burstsim.conf  burstsim_heterogeneous.conf  burstsim_paraver.conf  epi_narrow.conf  epi_wide.conf  fastmemsim.conf  frontend_bus.conf  frontend_direct.conf  marenostrum_configuration.conf  memsim.conf  mn4.conf  mn4_musa.conf  musa_sve_template_A.conf  musa_sve_template_B.conf  musa_sve_template_C.conf  musa_sve_template_D.conf  musa_sve_template_E.conf  musa_sve_template_F.conf  simplememsim.conf  sttmramsim.conf  sunway_configuration.conf  tasksim.conf  thunderx2.conf
src/tasksim-3.1/conf/paraver/: Tasksim_ram_counters.cfg  example.pcf  percentage_free_cache_lines.cfg  tasksim_function_name.cfg
src/tasksim-3.1/doc/: Doxyfile.in  Makefile.am  Makefile.in
src/tasksim-3.1/examples/: Makefile.am  Makefile.in  musa_tutorial_generate_sve_traces.bash  musa_tutorial_sve_simulations.bash
src/tasksim-3.1/examples/plots/: bw.plot  bw_t.plot  extract_data.bash  extract_data_sve_config.bash  extract_data_sve_thread.bash  extract_data_thread_config.bash  extract_data_thread_sve.bash  requests.plot  requests_t.plot  sim_time.plot  sim_time_t.plot  speedup.plot  speedup_t.plot
src/tasksim-3.1/examples/step1_tracing/: comparison_hpccg.plot  create_sim_environment.bash  extrae.xml  generate_hpccg_comparison.bash  generate_speedup_graph.bash  job_tracer.bash  job_tracer_memory.bash  job_tracer_mn3.bash  job_tracer_sve.bash  job_tracer_sve_memory.bash  native_run.bash  paraver_filter.cfg  speedup.plot
src/tasksim-3.1/examples/step2_presim/: cleanup.bash  example.pcf  extrapolate_burst_duration.bash  generate_musa_presim.bash  job_presim.bash  job_presim_mn3.bash  launch_musa_presim.bash  tasksim.conf
src/tasksim-3.1/examples/step3_integration/: 02_Dimemas_sim.bash  03_DimemasTS_sim_online.bash  03_DimemasTS_sim_presim.bash  config_NET.cfg  dimemas.collectives  integrate_dimemas_simulations.bash
src/tasksim-3.1/examples/tutorial_instructions/: session1_step1_introduction.txt  session1_step2_enviroment_setup.txt  session1_step3_native_run.txt  session1_step4_burst_trace_generation.txt  session1_step5_burst_simulation.txt  session1_step6_simulation_integration_and_analysis.txt  session2_instructions.txt  session2_step1_memory_mode_trace_generation.txt  session2_step2_memory_mode_simulation.txt  session2_step3_memory_mode_integration.txt  session2_step4_result_analysis.txt  session3.txt
src/tasksim-3.1/ext/: Makefile.am  Makefile.in
src/tasksim-3.1/ext/dimemas-5.2.12_musa/: Makefile.in  config.h.in~  configure.ac
src/tasksim-3.1/ext/dimemas-5.2.12_musa/Simulator/: Makefile.am  Makefile.in
src/tasksim-3.1/ext/dimemas-5.2.12_musa/autom4te.cache/: output.1  requests  traces.0
src/tasksim-3.1/ext/dimemas-5.2.12_musa/common_utilities/: Makefile.in
src/tasksim-3.1/ext/dimemas-5.2.12_musa/include/: Makefile.in  data_types.h  define.h  macosx_limits.h
src/tasksim-3.1/ext/dimemas-5.2.12_musa/trf2dim/: Makefile.am  Makefile.in
src/tasksim-3.1/ext/nanox/: nextsim.cpp
src/tasksim-3.1/ext/ptlsim-20090314-r229/: .globals.h.swp  .nfs00000000050c0f3800001c95  Makefile  config.cpp  config.h  datastore.cpp  datastore.h  dcache.h  decode-complex.cpp  decode-core.cpp  decode-fast.cpp  decode-sse.cpp  decode-x87.cpp  decode.h  globals.h  kernel.cpp  kernel.h  klibc.cpp  logic.h  mathlib.cpp  mathlib.h  mm-private.h  mm.cpp  mm.h  ptlhwdef.h  ptlsim.cpp  ptlsim.h  superstl.cpp  superstl.h  syscalls.h  uopimpl.cpp
src/tasksim-3.1/ext/ptlsim-20090314-r229/Documentation/: PTLsimManual.tex  PTLsimManual.txt
src/tasksim-3.1/m4/: dr.m4  libtool.m4  ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4  pin.m4
src/tasksim-3.1/ompss/: Makefile.in  nextsim_trace.patch
src/tasksim-3.1/scripts/: Makefile.am  Makefile.in  create_musa_core_sim.bash  create_musa_simulation_env.bash  dr_musa_command.bash  dr_musa_command_sve.bash  extrae_trace_command.bash  extrae_trace_command_sve.bash  extrapolate_detail_to_burst.py  generate_musa_presim.bash  launch_musa_tracer.bash  launch_musa_tracer_sve.bash  merge_sve.bash  musa_fallback_recovery.bash  musa_fourth_session  musa_get_third_session_trace.bash  musa_load_tracing_example.bash  musa_ompss.bash  musa_start  musa_sve_start.bash  musa_third_session.bash  sve_ompss.bash  sve_trace.bash  system_musa.bash
src/tasksim-3.1/scripts/design_space_exploration/: 00_create_multiple_tsconfig.py  01_create_sim_cmdfile.bash  02_create_powermodel_cmdfile.py  03_musa_process_presim.py  03a_adjust_presim_burst.py  03b_extrapolate_detail_to_burst.py  03c_DimemasTS_integration.sh  04_parse_sim_results.py
src/tasksim-3.1/scripts/design_space_exploration/tsconfig_template/: ts_mini.conf  ts_template.conf  ts_template_exampleconf
src/tasksim-3.1/scripts/module/: README
src/tasksim-3.1/scripts/module/MUSA/: release.2.5.4_rle  release.2.5.4_text
src/tasksim-3.1/scripts/module/MUSA_MN3/: release.2.5.4_rle  release.2.5.4_text
src/tasksim-3.1/src/: Makefile.am  Makefile.in  ip_
src/tasksim-3.1/src/core/: Makefile.am  Makefile.in
src/tasksim-3.1/src/core/engine/: Config-impl.h  Config.cpp  Config.h  DModule-impl.h  DModule.h  EventBuffer-impl.h  EventBuffer.h  IModule-impl.h  IModule.h  InPort-impl.h  InPort.h  Module-impl.h  Module.h  OutPort-impl.h  OutPort.h  Simulator-impl.h  Simulator.cpp  (+2 more)
src/tasksim-3.1/src/simulators/: Makefile.am  Makefile.in
src/tasksim-3.1/tests/: Makefile.am  Makefile.in
src/tasksim-3.1/tests/functional/: Makefile.am  Makefile.in  run_tests
src/tasksim-3.1/tests/unit/: Makefile.am  Makefile.in
src/tasksim-3.1/traces/memsim/: ls.bbl.trace  ls.dict.trace  ls.mem.trace  ls.streaminfo
(+608 files in other folders)
