exampledir = $(prefix)/etc/examples
nobase_example_DATA = step1_tracing/extrae.xml \
               step1_tracing/job_tracer.bash \
               step1_tracing/job_tracer_sve.bash \
               step1_tracing/job_tracer_memory.bash \
               step1_tracing/job_tracer_sve_memory.bash \
               step1_tracing/job_tracer_mn3.bash \
               step1_tracing/step1_instructions.txt \
               step1_tracing/dark2.pal \
               step1_tracing/speedup.plot \
               step1_tracing/comparison_hpccg.plot \
               step1_tracing/generate_speedup_graph.bash \
               step1_tracing/native_run.bash \
               step1_tracing/paraver_filter.cfg \
               step1_tracing/create_sim_environment.bash \
               step1_tracing/generate_hpccg_comparison.bash \
               step2_presim/example.pcf \
               step2_presim/generate_musa_presim.bash \
               step2_presim/cleanup.bash \
               step2_presim/launch_musa_presim.bash \
               step2_presim/job_presim.bash \
               step2_presim/job_presim_mn3.bash \
               step2_presim/extrapolate_burst_duration.bash \
               step2_presim/tasksim.conf \
               step3_integration/02_Dimemas_sim.bash \
               step3_integration/03_DimemasTS_sim_online.bash \
               step3_integration/03_DimemasTS_sim_presim.bash \
               step3_integration/config_NET.cfg \
               step3_integration/integrate_dimemas_simulations.bash \
               step3_integration/dimemas.collectives \
               tutorial_instructions/session1_step1_introduction.txt \
               tutorial_instructions/session1_step2_enviroment_setup.txt \
               tutorial_instructions/session1_step3_native_run.txt \
               tutorial_instructions/session1_step4_burst_trace_generation.txt \
               tutorial_instructions/session1_step5_burst_simulation.txt \
               tutorial_instructions/session1_step6_simulation_integration_and_analysis.txt \
               tutorial_instructions/session2_step1_memory_mode_trace_generation.txt \
               tutorial_instructions/session2_step2_memory_mode_simulation.txt \
               tutorial_instructions/session2_step3_memory_mode_integration.txt \
               tutorial_instructions/session2_step4_result_analysis.txt \
               tutorial_instructions/session3.txt \
               plots/bw.plot \
               plots/bw_t.plot \
               plots/requests.plot \
               plots/requests_t.plot \
               plots/sim_time.plot \
               plots/sim_time_t.plot \
               plots/speedup.plot \
               plots/speedup_t.plot \
               plots/extract_data.bash \
               plots/extract_data_sve_config.bash \
               plots/extract_data_sve_thread.bash \
               plots/extract_data_thread_config.bash \
               plots/extract_data_thread_sve.bash \
               musa_tutorial_generate_sve_traces.bash \
               musa_tutorial_sve_simulations.bash
