SUBDIRS = .

dist_bin_SCRIPTS = \
  launch_musa_tracer.bash \
  launch_musa_tracer_sve.bash \
  system_musa.bash \
  musa_start \
  musa_sve_start.bash \
  musa_third_session.bash \
  musa_get_third_session_trace.bash \
  musa_load_tracing_example.bash \
  create_musa_simulation_env.bash \
  create_musa_core_sim.bash \
  generate_musa_presim.bash \
  extrapolate_detail_to_burst.py \
  dr_musa_command.bash \
  dr_musa_command_sve.bash \
  merge_sve.bash \
  sve_ompss.bash \
  sve_trace.bash \
  musa_ompss.bash \
  extrae_trace_command.bash \
  extrae_trace_command_sve.bash \
  musa_fallback_recovery.bash \
  musa_fourth_session \
  $(END)

